<resources>
    <string name="app_name" translatable="false">Sensei</string>
    <string name="chamada">Chamada</string>
    <string name="home" translatable="false">Home</string>
    <string name="groups">Turmas</string>
    <string name="settings">Configurações</string>
    <string name="students">Alunos</string>

    <string name="language_english" translatable="false">Language changed successfully!</string>
    <string name="language_portuguese" translatable="false">Idioma alterado com sucesso!</string>
    <string name="language_spanish" translatable="false">¡El idioma cambió correctamente!</string>

    <string name="add_group">Adicionar turma</string>
    <string name="add_student">Adicionar aluno</string>
    <string name="edit_student">Editar aluno</string>
    <string name="edit_presence_number"><u>Editar quantidade de presenças</u></string>
    <string name="edit_group">Editar turma</string>
    <string name="change_language">Alterar idioma</string>
    <string name="change_name">Alterar nome</string>

    <string name="reset_all">Resetar aplicação</string>
    <string name="reset">Resetar</string>
    <string name="change">Alterar</string>
    <string name="delete">Excluir</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Adicionar</string>

    <string name="group_name">Nome da turma</string>
    <string name="reports">Relatórios</string>

    <string name="presence">Presenças</string>
    <string name="amount_of_presence">Quantidade de presença</string>

    <string name="no_groups">Sem nenhuma turma</string>
    <string name="no_students">Sem alunos</string>
    <string name="change_number">Alterar quantidade de presença</string>

    <string name="delete_all_sucess">Aplicação resetada com sucesso</string>
    <string name="amount_change_sucess">Quantidade de presença alterado com sucesso</string>
    <string name="call_info">Presença confirmada</string>

    <string name="delete_student_message">Deseja excluir o aluno?</string>
    <string name="delete_group_message">Deseja excluir a turma</string>
    <string name="delete_all">Deseja resetar tudo?</string>

    <string name="complete_name">Nome completo</string>
    <string name="grade">Grau</string>
    <string name="age">Idade</string>
    <string name="phone">Celular</string>
    <string name="birth_date">Data de nascimento</string>
    <string name="start_date">Data de inicio</string>
    <string name="start_date_details">Data de início:</string>
    <string name="age_details">Idade:</string>
    <string name="presences_txt">Presenças:</string>
    <string name="groups_total">Total de turmas:</string>
    <string name="students_total">Total de alunos:</string>

    <string name="empty_name_group">Preencha o campo nome da turma</string>
    <string name="empty_name">Preencha o campo nome completo</string>
    <string name="empty_birthday">Preencha o campo data de nascimento</string>
    <string name="empty_phone">Preencha o campo celular</string>
    <string name="empty_grade">Preencha o campo grau</string>
    <string name="empty_date_start">Preencha o campo data de início</string>

    <string name="click_button_plus">Clique no botão de + para adicionar uma nova turma</string>
    <string name="click_button_plus_student">Clique no botão de + para adicionar um novo aluno</string>
    <string name="language_selected">Selecione um idioma</string>
    <string name="gender">Gênero</string>
    <string name="Female">Feminino</string>
    <string name="Male">Masculino</string>
    <string name="empty_gender">Selecione um gênero</string>
    <string name="select_class_for_call">Selecione uma turma para fazer chamada</string>
    <string name="details">Detalhes</string>
    <string name="notes">Anotações</string>
    <string name="empty_notes">Notas vazias</string>
    <string name="add_note">Adicionar anotação</string>
    <string name="edit_note">Editar anotação</string>
    <string name="delete_note">Deletar anotação?</string>
    <string name="note">Anotação</string>
    <string name="empty_note">Preencha o campo anotação</string>
    <string name="txt_total_mens">Total sexo masculino:</string>
    <string name="txt_total_womens">Total sexo feminino:</string>
    <string name="ranking">Ranking</string>
    <string name="ranking_info">Ranking por quantidade de presenças dos alunos.</string>
    <string name="empty_ranking">Sem alunos cadastrados</string>
    <string name="placing">Colocação</string>
    <string name="add_student_fail">Erro ao adicionar estudante</string>
    <string name="add_student_sucess">Estudante adicionado com sucesso</string>
    <string name="update_data_sucess">Dados atualizados com sucesso</string>
    <string name="error_message">Um erro inesperado aconteceu, tente novamente mais tarde</string>
    <string name="add_group_sucess">Turma adicionada com sucesso</string>
    <string name="presence2">Presenças:</string>
    <string name="edit">Editar</string>
    <string name="empty_weight">Insira um valor para peso</string>
    <string name="empty_height">Insira um valor para altura</string>
    <string name="light_thinness">Magreza</string>
    <string name="healthy">Saudável</string>
    <string name="overweight">Sobrepeso</string>
    <string name="obesity_Grade_1">Obesidade Grau 1</string>
    <string name="obesity_Grade_2">Obesidade Grau 2</string>
    <string name="imc">IMC</string>
    <string name="calculate">Calcular</string>
    <string name="obesity_Grade_3">Obesidade Grau 3</string>
    <string name="digit_height">Digite sua altura (metros)</string>
    <string name="digit_weight">Digite seu peso (kg)</string>
    <string name="information">Informações</string>
    <string name="imc_info">O IMC ou  Índice de Massa Corporal é uma medida internacional usada para calcular se uma pessoa está no peso ideal.</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="notes_info">Salve e gerencie suas anotações.</string>
    <string name="remove_presence">Presença removida</string>

</resources>