<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.matheussilas97.sensei.view.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/groups_fragment"
        android:name="com.matheussilas97.sensei.view.fragment.GroupsFragment"
        android:label="@string/groups"
        tools:layout="@layout/fragment_groups"/>

    <fragment
        android:id="@+id/settings_fragment"
        android:name="com.matheussilas97.sensei.view.fragment.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>

</navigation>